--- a/MyMovies/app/src/main/res/values/colors.xml
+++ b/MyMovies/app/src/main/res/values/colors.xml
@@ -5,6 +5,6 @@
     <color name="colorAccent">#FF4081</color>
     <color name="cardview_background">#000</color>
     <color name="black">#000</color>
-
+    <color name="black_200">#a0000000</color>
 
 </resources>
