--- a/MyMovies/app/src/main/res/values/styles.xml
+++ b/MyMovies/app/src/main/res/values/styles.xml
@@ -13,4 +13,10 @@
         <item name="colorControlActivated">@color/colorAccent</item>
     </style>
 
+    <style name="DetailsTextStyle">
+        <item name="android:layout_width">wrap_content</item>
+        <item name="android:layout_height">wrap_content</item>
+        <item name="android:layout_marginLeft">@dimen/details_screen_margin</item>
+        <item name="android:layout_marginRight">@dimen/details_screen_margin</item>
+    </style>
 </resources>
